# reno

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  examples.rst  history.rst  index.rst  installation.rst  sphinxext.rst  usage.rst
doc/source/contributor/: contributing.rst
doc/source/install/: index.rst
doc/source/releasenotes/: index.rst
doc/source/user/: design.rst  examples.rst  index.rst  setuptools.rst  sphinxext.rst  usage.rst
examples/notes/: add-complex-example-6b5927c246456896.yaml
releasenotes/notes/: 2857bfc9474c00b4-first-release.yaml  4a092b4102370246-sphinx-extension.yaml  4e0bcb6f76571b4f-fix-prelude.yaml  Enable-using-tempalte-file-be734d8698309409.yaml  add-closed-branch-config-options-8773caf240e4653f.yaml  add-config-file-e77084792c1dc695.yaml  add-deprecations-section-6b0f118fe190585c.yaml  add-earliest-version-6f3d634770e855d0.yaml  add-linter-ce0a861ade64baf2.yaml  add-verbose-flag-88d72cb01812c616.yaml  allow-short-branch-names-61a35be55f04cea4.yaml  avoid-clashing-uids-e84ffe8132ce996d.yaml  branches-eol-bcafc2a007a1eb9f.yaml  bug-1537451-f44591da125ba09d.yaml  cache-ordering-6c743f68e3f7107f.yaml  cache-scan-all-branches-a935824a844d1d9f.yaml  collapse-pre-releases-0b24e0bab46d7cf1.yaml  config-option-branch-name-re-8ecfe93195b8824e.yaml  config-option-sections-9c68b070698e984a.yaml  custom-tag-versions-d02028b6d35db967.yaml  default-repository-root-cli-85d23034bef81619.yaml  deprecate-version-attribute-7cae9a4ebce99776.yaml  drop-python-2-7-73d3113c69d724d6.yaml  dulwich-rewrite-3a5377162d97402b.yaml  eol-branches-57031b941b01d5d1.yaml  file-encoding-option-6aa3e32f2bf830b8.yaml  fix-branch-base-detection-95300805f26a0c15.yaml  fix-cli-option-handling-a13652d14507f2d7.yaml  fix-delete-handling-55232c50b647aa57.yaml  fix-git-log-ordering-0e52f95f66c8db5b.yaml  fix-noisy-log-deleted-release-notes-28208816eac8abe9.yaml  fix-scanner-tag-detection-ef0a95c12a90f167.yaml  fix-sphinxext-scanner-0aa012ada66db773.yaml  flexible-formatting-31c8de2599d3637d.yaml  ignore-notes-option-9d0bde540fbcdf22.yaml  ignore-null-merges-56b7a8ed9b20859e.yaml  include-working-copy-d0aed2e77bb095e6.yaml  keep-scanning-past-branchpoint-61f72023c32cf0b3.yaml  log-levels-and-sphinx-161-6efe0d291718a657.yaml  no-show-source-option-ee02766b26fe53be.yaml  (+26 more)
reno/: __init__.py  cache.py  config.py  create.py  defaults.py  formatter.py  linter.py  lister.py  loader.py  main.py  report.py  scanner.py  semver.py  setup_command.py  sphinxext.py  utils.py
reno/_exts/: show_reno_config.py
reno/tests/: base.py  test_cache.py  test_config.py  test_create.py  test_exts.py  test_formatter.py  test_loader.py  test_reno.py  test_scanner.py  test_semver.py  test_utils.py
