[metadata]
name = reno
summary = RElease NOtes manager
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/reno/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    reno

[entry_points]
console_scripts =
    reno = reno.main:main

[extras]
sphinx =
  sphinx>=1.5.1  # BSD
  docutils>=0.11  # OSI-Approved Open Source, Public Domain

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = reno/locale
domain = reno

[update_catalog]
domain = reno
output_dir = reno/locale
input_file = reno/locale/reno.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = reno/locale/reno.pot
