[metadata]
name = reno
summary = RElease NOtes manager
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/reno/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    reno

[entry_points]
console_scripts =
    reno = reno.main:main
distutils.commands =
    build_reno = reno.setup_command:BuildReno

[extras]
sphinx =
  sphinx>=1.6.1  # BSD
  docutils>=0.11  # OSI-Approved Open Source, Public Domain

[compile_catalog]
directory = reno/locale
domain = reno

[update_catalog]
domain = reno
output_dir = reno/locale
input_file = reno/locale/reno.pot

[wheel]
universal = 1
