[metadata]
name = reno
summary = RElease NOtes manager
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/reno/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    reno

[entry_points]
console_scripts =
    reno = reno.main:main
distutils.commands =
    build_reno = reno.setup_command:BuildReno

[extras]
sphinx =
  sphinx>=2.0.0,!=2.1.0  # BSD
  docutils>=0.11  # OSI-Approved Open Source, Public Domain
